--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <link rel="canonical" href="https://lgyarmati.github.io/data-science-blog/" />
 <meta property="og:url" content="https://lgyarmati.github.io/data-science-blog/" />
 <meta property="og:site_name" content="Short Tips and Remarks on Data Science" />
-<meta property="og:image" content="https://lgyarmati.github.io/data-science-blog/images/logo.png" />
 <script type="application/ld+json">
-{"description":"Collection of short, ready-to-apply hints that make data science more fun.","url":"https://lgyarmati.github.io/data-science-blog/","@type":"WebSite","headline":"Short Tips and Remarks on Data Science","image":"https://lgyarmati.github.io/data-science-blog/images/logo.png","name":"Short Tips and Remarks on Data Science","@context":"https://schema.org"}</script>
+{"description":"Collection of short, ready-to-apply hints that make data science more fun.","url":"https://lgyarmati.github.io/data-science-blog/","@type":"WebSite","headline":"Short Tips and Remarks on Data Science","name":"Short Tips and Remarks on Data Science","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/data-science-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://lgyarmati.github.io/data-science-blog/feed.xml" title="Short Tips and Remarks on Data Science" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -73,13 +72,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
-
-<p><img src="/data-science-blog/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+        <div class="home"><p>The field of data science and analytics is rapidly evolving. New tools and techniques appear day-by-day. My goal with this blog is to collect and distill some of the findings I learn while using/trying these out.</p>
 
 <h1 id="posts">Posts</h1>
 
