--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://lgyarmati.github.io/data-science-blog/about/" />
 <meta property="og:site_name" content="Short Tips and Remarks on Data Science" />
 <script type="application/ld+json">
-{"description":"Collection of short, ready-to-apply hints that make data science more fun.","url":"https://lgyarmati.github.io/data-science-blog/about/","@type":"WebSite","headline":"About Me","name":"Short Tips and Remarks on Data Science","@context":"https://schema.org"}</script>
+{"url":"https://lgyarmati.github.io/data-science-blog/about/","@type":"WebSite","headline":"About Me","name":"Short Tips and Remarks on Data Science","description":"Collection of short, ready-to-apply hints that make data science more fun.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/data-science-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://lgyarmati.github.io/data-science-blog/feed.xml" title="Short Tips and Remarks on Data Science" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
